--- a/app/views/calendars/new.html.erb
+++ b/app/views/calendars/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to Calendar View", home_calendar_path, class:"btn btn-sm btn-primary"   %>
+  <%= link_to "Back to Calendar View", home_calendar_path, class:"btn btn-lg btn-primary"   %>
 </div>
