--- a/app/views/home/_week_titles.html.erb
+++ b/app/views/home/_week_titles.html.erb
@@ -1,9 +1,9 @@
 <div class="calendar-container">
-    <h2 class="day_title">Monday</h2>
-    <h2 class="day_title">Tuesday</h2>
-    <h2 class="day_title">Wednesday</h2>
-    <h2 class="day_title">Thursday</h2>
-    <h2 class="day_title">Friday</h2>
-    <h2 class="day_title">Saturday</h2>
-    <h2 class="day_title">Sunday</h2>
+    <p class="day_title h2-styling">Monday</p>
+    <p class="day_title h2-styling">Tuesday</p>
+    <p class="day_title h2-styling">Wednesday</p>
+    <p class="day_title h2-styling">Thursday</p>
+    <p class="day_title h2-styling">Friday</p>
+    <p class="day_title h2-styling">Saturday</p>
+    <p class="day_title h2-styling">Sunday</p>
 </div>
