--- a/app/views/home/calendar.html.erb
+++ b/app/views/home/calendar.html.erb
@@ -10,7 +10,7 @@
             <input class="btn btn-sm btn-primary" id="datepicker-submit" value="Find" type="submit"/>      
         </form>
 
-    <div>
+    <div class="view-event-button">
         <div class="dropdown" align="left">
         <div class="btn btn-sm btn-primary">
             <a href="#" id="new-event" class="dropdown-toggle">
