--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container event-box" align="center">
+<div class="container event-box login_page" align="center">
   <% provide(:title, 'Sign up') %>
   <h3>Sign up for your account</h3>
   <br>
