--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -17,12 +17,12 @@
 
 <div>
   <% if Calendar.find_by(id: @assignment.calendar_id).user_id == Current.user.id%>
-    <%= link_to "Edit", edit_calendar_course_assignment_path(@assignment), class:"btn btn-sm btn-primary" %> |
+    <%= link_to "Edit", edit_calendar_course_assignment_path(@assignment), class:"btn btn-lg btn-primary" %> |
   <% end %>
-  <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-sm btn-primary"%>
+  <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-lg btn-primary"%>
   <% if Calendar.find_by(id: @assignment.calendar_id).user_id == Current.user.id%>
     <div class="delete-button">
-         <%= button_to  "Delete this course", calendar_course_assignment_path, method: :delete, class:"btn btn-sm btn-primary" %>
+         <%= button_to  "Delete this course", calendar_course_assignment_path, method: :delete, class:"btn btn-lg btn-primary" %>
     </div>
   <% end %>
 </div>
