--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -17,19 +17,19 @@
 <div>
   <% if Calendar.find_by(id: @class_period.calendar_id).user_id == Current.user.id%>
     <%= link_to "Edit", edit_calendar_course_class_period_path(Calendar.find_by(id: @class_period.calendar_id).invite_token, 
-          Course.find_by(id: @class_period.course_id).slug), class:"btn btn-sm btn-primary" %> |
+          Course.find_by(id: @class_period.course_id).slug), class:"btn btn-lg btn-primary" %> |
   <%end%>
-  <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-sm btn-primary"%>
+  <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-lg btn-primary"%>
   <br>
   <% if Calendar.find_by(id: @class_period.calendar_id).user_id == Current.user.id%>
     <div class="delete-button">
       <%= link_to "Edit all class information", edit_calendar_course_path(Calendar.find_by(id: @class_period.calendar_id).invite_token, 
-       Course.find_by(id: @class_period.course_id).slug),class:"btn btn-sm btn-primary" %>
+       Course.find_by(id: @class_period.course_id).slug),class:"btn btn-lg btn-primary" %>
     </div>
   <% end %>
   <% if Calendar.find_by(id: @class_period.calendar_id).user_id == Current.user.id%>
     <div class="delete-button">
-         <%= button_to  "Delete this class", calendar_course_class_period_path, method: :delete, class:"btn btn-sm btn-primary" %>
+         <%= button_to  "Delete this class", calendar_course_class_period_path, method: :delete, class:"btn btn-lg btn-primary" %>
     </div>
   <%end%>  
 </div>
