--- a/app/views/holidays/show.html.erb
+++ b/app/views/holidays/show.html.erb
@@ -13,12 +13,12 @@
 
 <div>
   <% if Calendar.find_by(id: @holiday.calendar_id).user_id == Current.user.id%>
-    <%= link_to "Edit",edit_calendar_holiday_path(Calendar.find_by(id: @holiday.calendar_id).invite_token, @holiday.slug), class:"btn btn-sm btn-primary" %> |
+    <%= link_to "Edit",edit_calendar_holiday_path(Calendar.find_by(id: @holiday.calendar_id).invite_token, @holiday.slug), class:"btn btn-lg btn-primary" %> |
   <%end%>
-    <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-sm btn-primary"%>
+    <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-lg btn-primary"%>
   <% if Calendar.find_by(id: @holiday.calendar_id).user_id == Current.user.id%>
     <div class="delete-button">
-      <%= button_to  "Delete this holiday", calendar_holiday_path, method: :delete, class:"btn btn-sm btn-primary" %>
+      <%= button_to  "Delete this holiday", calendar_holiday_path, method: :delete, class:"btn btn-lg btn-primary" %>
     </div>
   <%end%>
 </div>
