--- a/app/views/other_events/show.html.erb
+++ b/app/views/other_events/show.html.erb
@@ -14,12 +14,12 @@
 <div>
   <% if Calendar.find_by(id: @other_event.calendar_id).user_id == Current.user.id%>
     <%= link_to "Edit", edit_calendar_other_event_path(Calendar.find_by(id: @other_event.calendar_id).invite_token, @other_event.slug), 
-    class:"btn btn-sm btn-primary" %> |
+    class:"btn btn-lg btn-primary" %> |
   <%end%>
-    <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-sm btn-primary"%>
+    <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-lg btn-primary"%>
   <% if Calendar.find_by(id: @other_event.calendar_id).user_id == Current.user.id%>
     <div class="delete-button">
-        <%= button_to  "Delete this event", calendar_other_event_path, method: :delete, class:"btn btn-sm btn-primary" %>
+        <%= button_to  "Delete this event", calendar_other_event_path, method: :delete, class:"btn btn-lg btn-primary" %>
     </div>
   <%end%>
 </div>
