--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -19,10 +19,10 @@
   <% if Calendar.find_by(id: @assignment.calendar_id).user_id == Current.user.id%>
     <%= link_to "Edit", edit_calendar_course_assignment_path(@assignment), class:"btn btn-lg btn-primary" %> |
   <% end %>
-  <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-lg btn-primary"%>
+  <%= link_to "Back", :back, class:"btn btn-lg btn-primary"%>
   <% if Calendar.find_by(id: @assignment.calendar_id).user_id == Current.user.id%>
     <div class="delete-button">
-         <%= button_to  "Delete this course", calendar_course_assignment_path, method: :delete, class:"btn btn-lg btn-primary" %>
+         <%= button_to  "Delete this course", calendar_course_assignment_path, method: :delete, class:"btn btn-lg btn-primary", form: { data: { turbo_confirm: "Are you sure you want to delete this assignment?" }}%>
     </div>
   <% end %>
 </div>
