--- a/app/views/calendars/search.html.erb
+++ b/app/views/calendars/search.html.erb
@@ -23,3 +23,7 @@
   </tbody>
 </table>
 
+<div class="input-group input-group-sm mb-3 search-calendar-button" >
+  <%= link_to "Back", :back, class:"btn btn-lg btn-primary"%>
+</div>
+
