--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -19,7 +19,7 @@
     <%= link_to "Edit", edit_calendar_course_class_period_path(Calendar.find_by(id: @class_period.calendar_id).invite_token, 
           Course.find_by(id: @class_period.course_id).slug), class:"btn btn-lg btn-primary" %> |
   <%end%>
-  <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-lg btn-primary"%>
+  <%= link_to "Back", :back, class:"btn btn-lg btn-primary"%>
   <br>
   <% if Calendar.find_by(id: @class_period.calendar_id).user_id == Current.user.id%>
     <div class="delete-button">
