--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -29,7 +29,14 @@
       <%= link_to "Back", :back, class:"btn btn-lg btn-primary"%>
     <% if Calendar.find_by(id: @course.calendar_id).user_id == Current.user.id%>
       <div class="delete-button">
-         <%= button_to  "Delete this course", calendar_course_path, method: :delete, class:"btn btn-lg btn-primary", form: { data: { turbo_confirm: "Are you sure you want to delete this course? \nAll related assignments will be deleted." }} %>
+         <%= button_to  " Delete this course ", calendar_course_path, method: :delete, class:"btn btn-lg btn-primary", form: { data: { turbo_confirm: "Are you sure you want to delete this course? \nAll related assignments will be deleted." }} %>
+      </div>
+      <div>
+        <%= form_tag add_new_assignment_courses_path, multipart: true do %>
+          <%= hidden_field_tag :calendar_id , @course.calendar_id %>
+          <%= hidden_field_tag :course_id , @course.id%>
+          <%= submit_tag "Add new assignment", class:"btn btn-lg btn-primary subscribe-button" %>
+        <% end %>
       </div>
     <%end%>
   </div>
