--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -55,6 +55,7 @@ h2 {
 .h2-styling{
   font-size: 1.2em;
   letter-spacing: -1px;
+  padding-top: 10px;
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
