--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -53,13 +53,13 @@
     <div class="form-group">
         <%= form.label :Meeting_Days %>
         <div class = "weekday-selector">
-          <%= form.check_box :repetition_frequency, { multiple: true }, 'M', false %>M
-          <%= form.check_box :repetition_frequency, { multiple: true }, 'T', false %>T
-          <%= form.check_box :repetition_frequency, { multiple: true }, 'W', false %>W
-          <%= form.check_box :repetition_frequency, { multiple: true }, 'H', false %>Th
-          <%= form.check_box :repetition_frequency, { multiple: true }, 'F', false %>F
-          <%= form.check_box :repetition_frequency, { multiple: true }, 'S', false %>Sa
-          <%= form.check_box :repetition_frequency, { multiple: true }, 'U', false %>Su
+          M<%= form.check_box :repetition_frequency, { multiple: true }, 'M', false %>
+          T<%= form.check_box :repetition_frequency, { multiple: true }, 'T', false %>
+          W<%= form.check_box :repetition_frequency, { multiple: true }, 'W', false %>
+          Th<%= form.check_box :repetition_frequency, { multiple: true }, 'H', false %>
+          F<%= form.check_box :repetition_frequency, { multiple: true }, 'F', false %>
+          Sa<%= form.check_box :repetition_frequency, { multiple: true }, 'S', false %>
+          Su<%= form.check_box :repetition_frequency, { multiple: true }, 'U', false %>
         </div>  
     </div> 
 
