change color of delte button

--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -22,7 +22,7 @@
   <%= link_to "Back", :back, class:"btn btn-lg btn-primary"%>
   <% if Calendar.find_by(id: @assignment.calendar_id).user_id == Current.user.id%>
     <div class="delete-button">
-         <%= button_to  "Delete this course", calendar_course_assignment_path, method: :delete, class:"btn btn-lg btn-primary", form: { data: { turbo_confirm: "Are you sure you want to delete this assignment?" }}%>
+         <%= button_to  "Delete this course", calendar_course_assignment_path, method: :delete, class:"btn btn-lg btn-danger", form: { data: { turbo_confirm: "Are you sure you want to delete this assignment?" }}%>
     </div>
   <% end %>
 </div>
