--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -22,7 +22,7 @@
 
     <div class="input-group input-group-sm mb-3">
       <%= form.label :course_id, style: "display: block" %>
-      <%= form.select :course_id, CalendarHelper.load_courses(current_user[:id]), include_blank:true %>
+      <%= form.select :course_id, CalendarHelper.load_courses_selection(current_user[:id]), include_blank:true %>
     </div>
 
     <%= link_to "Create a New Course", new_course_path %>
