--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -31,7 +31,6 @@
   </table>
   <%# redirect to search page %>
   <div class="input-group input-group-sm mb-3 search-calendar-button" >
-    <%= link_to "Subscribe to more calendars", subscribe_url, class:"btn btn-lg btn-primary" %>
+    <%= link_to "Create a new calendar", new_calendar_path, class:"btn btn-lg btn-primary" %> |  <%= link_to "Subscribe to more calendars", subscribe_url, class:"btn btn-lg btn-primary" %>
   </div>
-
 </div>
