--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -126,28 +126,44 @@
     <%# <% if UserCalendar.exists?(user_id: @current_user.id, calendar_id: @calendar.id) %> 
     <% if Calendar.find_by(id: @calendar.id).user_id == Current.user.id %>
       <h3>
-        <%= link_to "Edit this calendar", edit_calendar_path(@calendar), class:"btn btn-lg btn-primary"%> |
-        <%= link_to "Back to Calendar List", calendars_path, class:"btn btn-lg btn-primary"%>
-        <div class="delete-button">
-        <%= button_to "Delete this calendar", @calendar, method: :delete, form: { data: { turbo_confirm: "Are you sure you want to delete this calendar?/nAll related events will be delted" }}, class:"btn btn-lg btn-danger"%> 
+        <%= link_to "Edit this calendar", edit_calendar_path(@calendar), class:"btn btn-sl btn-primary"%> |
+        <%= link_to "Back to Calendar List", calendars_path, class:"btn btn-sl btn-primary"%> | 
+        <div class="btn btn-sl btn-primary">
+            <a href="#" id="new-event" class="dropdown-toggle">
+                Add New Event <b class="caret"></b>
+            </a>
         </div>
+        <ul id="new-event-menu" class="dropdown-menu">
+            <li>
+            <%= link_to "New course", new_course_path %>
+            <%= link_to "New assignment", new_assignment_path %>
+            <%= link_to "New holiday", new_holiday_path %>
+            <%= link_to "New other event", new_other_event_path %>
+            </li>
+        </ul>
       </h3>
+      <hr class="rounded">
       <div <%= @calendar.id %> aria-labelledby="heading<%= @calendar.id %>">
       <div class="card-body">
         <div class="invite-box" data-controller="invite">
-          <h5 class="mb-1">Click on the link below to copy and share with a friend:</h5>
+          <h4 class="mb-1">Click on the link below to copy and share with a friend:</h4>
           <input class="btn btn-lg btn-link" onclick="this.select();document.execCommand('copy');" class="calendar-url" id="cb-link-field" type="text" value="<%= new_calendar_user_calendar_url(@calendar) %>" data-target="invite.url" data-calendar-token="<%= @calendar.invite_token %>"/>
           </div>
         </div>
       </div>
+      <hr class="rounded">
       <div class = "container" style = "width:70%" >
       <h3> Import Courses To This Calendar</h3>
         <%= form_tag import_from_excel_courses_url, multipart: true do %>
           <%= file_field_tag :file%>
           <%= hidden_field_tag :calendar_id , @calendar.id %>
-          <%= submit_tag "Import courses", class:"btn btn-lg btn-primary subscribe-button" %>
+          <%= submit_tag "Import courses", class:"btn btn-sl btn-primary subscribe-button" %>
         <% end %>
       </div>  
+      <hr class="rounded">
+      <div class="delete-button">
+        <%= button_to "Delete this calendar", @calendar, method: :delete, form: { data: { turbo_confirm: "Are you sure you want to delete this calendar?/nAll related events will be delted" }}, class:"btn btn-lg btn-danger"%> 
+      </div>
     <div>
     <% elsif UserCalendar.exists?(user_id: @current_user.id, calendar_id: @calendar.id) %>
       <h3> 
