update account nav bar options

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,9 +19,9 @@
               Account <b class="caret"></b>
             </a>
             <ul id="dropdown-menu" class="dropdown-menu">
-              <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Calendars", calendars_url %></li>
-              <li><%= link_to "Events", total_events_url %></li>
+              <li><%= link_to "Profile Page", current_user %></li>
+              <li><%= link_to "Calendar List", calendars_url %></li>
+              <li><%= link_to "Event List", total_events_url %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", logout_path,
