change button size

--- a/app/views/calendars/_form.html.erb
+++ b/app/views/calendars/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
 
   <div class="input-group input-group-sm mb-3 delete-button">
-    <%= form.submit "Submit", class:"btn btn-lg btn-primary" %>
+    <%= form.submit "Submit", class:"btn btn-sl btn-primary" %>
   </div>
 <div>
 <% end %>
