--- a/app/views/other_events/_form.html.erb
+++ b/app/views/other_events/_form.html.erb
@@ -39,7 +39,7 @@
     </div>
 
     <div class="input-group input-group-sm mb-3">
-      <%= form.submit :Submit, class:"btn btn-lg btn-primary" %>
+      <%= form.submit :Submit, class:"btn btn-sl btn-primary" %>
     </div>
   <% end %>
 </div>
