--- a/app/views/static_pages/subscribe.html.erb
+++ b/app/views/static_pages/subscribe.html.erb
@@ -5,13 +5,13 @@
             <form name="myform" >
                 <textarea class="search-form-input" name="outputtext" rows="1" placeholder="Paste the calendar link"></textarea>
                 </br>
-                <button type="submit" value="submit" class="subscribe btn btn-lg btn-primary delete-button" id="subscribe"> Subscribe to the calendar </button>
+                <button type="submit" value="submit" class="subscribe btn btn-sl btn-primary delete-button" id="subscribe"> Subscribe to the calendar </button>
             </form>
             <h4> Option 2: Search keywords for public calendars </h4>
             <form action="/search">
                 <input class="search-form-input" name ="q" rows="1" type = "text" placeholder="Search a public calendar" aria-label = "Search">
                 </br>
-                <button class = "btn btn-lg btn-primary delete-button" type="search"> Search </button> 
+                <button class = "btn btn-sl btn-primary delete-button" type="search"> Search </button> 
             </form>
         </div>
 </div>
