--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -37,7 +37,7 @@
 
     <br>
     <div class="input-group input-group-sm mb-3">
-      <%= form.submit :Save, class:"btn btn-lg btn-primary" %>
+      <%= form.submit :Save, class:"btn btn-sl btn-primary" %>
     </div>
 
   <% end %>
