--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -24,20 +24,20 @@
 
   <div>
     <% if Calendar.find_by(id: @course.calendar_id).user_id == Current.user.id%>
-      <%= link_to "Edit", edit_calendar_course_path(Calendar.find_by(id: @course.calendar_id).invite_token, @course.slug),class:"btn btn-lg btn-primary" %> |
+      <%= link_to "Edit", edit_calendar_course_path(Calendar.find_by(id: @course.calendar_id).invite_token, @course.slug),class:"btn btn-sl btn-primary" %> |
     <% end %>
-      <%= link_to "Back", :back, class:"btn btn-lg btn-primary"%>
+      <%= link_to "Back", :back, class:"btn btn-sl btn-primary"%>
       <br><br>
     <div>
       <%= form_tag add_new_assignment_courses_path, multipart: true do %>
         <%= hidden_field_tag :calendar_id , @course.calendar_id %>
         <%= hidden_field_tag :course_id , @course.id%>
-        <%= submit_tag "Add assignment", class:"btn btn-lg btn-primary subscribe-button" %>
+        <%= submit_tag "Add assignment", class:"btn btn-sl btn-primary subscribe-button" %>
       <% end %>
     </div>
     <% if Calendar.find_by(id: @course.calendar_id).user_id == Current.user.id%>
       <div class="delete-button">
-         <%= button_to  " Delete this course ", calendar_course_path, method: :delete, class:"btn btn-lg btn-danger ", form: { data: { turbo_confirm: "Are you sure you want to delete this course? \nAll related assignments will be deleted." }} %>
+         <%= button_to  " Delete this course ", calendar_course_path, method: :delete, class:"btn btn-sl btn-danger ", form: { data: { turbo_confirm: "Are you sure you want to delete this course? \nAll related assignments will be deleted." }} %>
       </div>
     <%end%>
   </div>
