--- a/app/views/holidays/show.html.erb
+++ b/app/views/holidays/show.html.erb
@@ -13,12 +13,12 @@
 
 <div>
   <% if Calendar.find_by(id: @holiday.calendar_id).user_id == Current.user.id%>
-    <%= link_to "Edit",edit_calendar_holiday_path(Calendar.find_by(id: @holiday.calendar_id).invite_token, @holiday.slug), class:"btn btn-lg btn-primary" %> |
+    <%= link_to "Edit",edit_calendar_holiday_path(Calendar.find_by(id: @holiday.calendar_id).invite_token, @holiday.slug), class:"btn btn-sl btn-primary" %> |
   <%end%>
-    <%= link_to "Back", :back, class:"btn btn-lg btn-primary"%>
+    <%= link_to "Back", :back, class:"btn btn-sl btn-primary"%>
   <% if Calendar.find_by(id: @holiday.calendar_id).user_id == Current.user.id%>
     <div class="delete-button">
-      <%= button_to  "Delete this holiday", calendar_holiday_path, method: :delete, class:"btn btn-lg btn-danger", form: { data: { turbo_confirm: "Are you sure you want to delete this holiday?" } } %>
+      <%= button_to  "Delete this holiday", calendar_holiday_path, method: :delete, class:"btn btn-sl btn-danger", form: { data: { turbo_confirm: "Are you sure you want to delete this holiday?" } } %>
     </div>
   <%end%>
 </div>
