--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,10 +8,10 @@
   
   <div>
    <% if @user.image_url%>
-    <%= link_to "Back", home_calendar_path, class:"btn btn-lg btn-primary"%>
+    <%= link_to "Back", home_calendar_path, class:"btn btn-sl btn-primary"%>
    <% else%>
-   <%= link_to "Edit", edit_user_path(@user), class:"btn btn-lg btn-primary" %> |
-    <%= link_to "Back", home_calendar_path, class:"btn btn-lg btn-primary"%>
+   <%= link_to "Edit", edit_user_path(@user), class:"btn btn-sl btn-primary" %> |
+    <%= link_to "Back", home_calendar_path, class:"btn btn-sl btn-primary"%>
     <%end%>
   </div>
 </div>
