add br in event show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,8 @@
    <% if @user.image_url%>
     <%= link_to "Back", home_calendar_path, class:"btn btn-sl btn-primary"%>
    <% else%>
-   <%= link_to "Edit", edit_user_path(@user), class:"btn btn-sl btn-primary" %> |
+   <%= link_to "Edit", edit_user_path(@user), class:"btn btn-sl btn-primary" %> 
+   <br><br>
     <%= link_to "Back", home_calendar_path, class:"btn btn-sl btn-primary"%>
     <%end%>
   </div>
