--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -20,13 +20,14 @@
           Course.find_by(id: @class_period.course_id).slug), class:"btn btn-sl btn-primary" %> |
   <%end%>
   <%= link_to "Back", :back, class:"btn btn-sl btn-primary"%>
-  <br>
+  <br><br>
   <% if Calendar.find_by(id: @class_period.calendar_id).user_id == Current.user.id%>
     <div class="delete-button">
-      <%= link_to "Edit all class information", edit_calendar_course_path(Calendar.find_by(id: @class_period.calendar_id).invite_token, 
+      <%= link_to "Edit course information", edit_calendar_course_path(Calendar.find_by(id: @class_period.calendar_id).invite_token, 
        Course.find_by(id: @class_period.course_id).slug),class:"btn btn-sl btn-primary" %>
     </div>
   <% end %>
+  <br>
   <% if Calendar.find_by(id: @class_period.calendar_id).user_id == Current.user.id%>
     <div class="delete-button">
          <%= button_to  "Delete this class", calendar_course_class_period_path, method: :delete, class:"btn btn-sl btn-danger", form: { data: { turbo_confirm: "Are you sure you want to delete this class?" }} %>
