--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -126,7 +126,7 @@
     <%# <% if UserCalendar.exists?(user_id: @current_user.id, calendar_id: @calendar.id) %> 
     <% if Calendar.find_by(id: @calendar.id).user_id == Current.user.id %>
       <h3>
-        <%= link_to "Edit this calendar", edit_calendar_path(@calendar), class:"btn btn-sl btn-primary"%> |
+        <%= link_to "Edit this Calendar", edit_calendar_path(@calendar), class:"btn btn-sl btn-primary"%> |
         <%= link_to "Back to Calendar List", calendars_path, class:"btn btn-sl btn-primary"%> | 
         <div class="btn btn-sl btn-primary">
             <a href="#" id="new-event" class="dropdown-toggle">
@@ -157,12 +157,12 @@
         <%= form_tag import_from_excel_courses_url, multipart: true do %>
           <%= file_field_tag :file%>
           <%= hidden_field_tag :calendar_id , @calendar.id %>
-          <%= submit_tag "Import courses", class:"btn btn-sl btn-primary subscribe-button" %>
+          <%= submit_tag "Import Courses", class:"btn btn-sl btn-primary subscribe-button" %>
         <% end %>
       </div>  
       <hr class="rounded">
       <div class="delete-button">
-        <%= button_to "Delete this calendar", @calendar, method: :delete, form: { data: { turbo_confirm: "Are you sure you want to delete this calendar?/nAll related events will be delted" }}, class:"btn btn-lg btn-danger"%> 
+        <%= button_to "Delete this Calendar", @calendar, method: :delete, form: { data: { turbo_confirm: "Are you sure you want to delete this calendar?/nAll related events will be delted" }}, class:"btn btn-lg btn-danger"%> 
       </div>
     <div>
     <% elsif UserCalendar.exists?(user_id: @current_user.id, calendar_id: @calendar.id) %>
