--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -261,11 +261,18 @@ input {
 .day-calendar-item {
     background-color: #f4fcff;
     padding: 20px;
+    padding-left:20px;
+    padding-right:20px;
     height: 150px;
     text-align: center;
     border-style: solid;
     border-width: 2px;
-    border-color:rgb(185, 185, 185)
+    border-color:rgb(185, 185, 185);
+}
+
+.day_event_list{
+  overflow-y: auto;
+  max-height: 400px;
 }
 
 .day_title {
