quick fix on user profile image an typo

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
       <div class="intro-container">
         <div class="slogan"><p style="text-align:center">Welcome to Brandeis Class Hub</p></div> 
         <p class="landing_intro" style="text-align:center">Brandeis Class Hub brings all your classes, assignments, and events together.</p></div> 
-        <p class="landing_intro"style="text-align:center"> A digital platform designed for Brandeis Community.</p></div>
+        <p class="landing_intro"style="text-align:center"> A digital platform designed for Brandeis community.</p></div>
         <div class = "start_button">
           <button class="row button-55"><%= link_to "Get Started Here", home_calendar_path %></button>
         </div>
