other_events system

--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -19,7 +19,7 @@
     <br><br>
 
     <div class="input-group input-group-sm mb-3">
-      <%= form.label :holiday_name, style: "display: block" %>
+      <%= form.label :name, style: "display: block" %>
       <%= form.text_field :name %>
     </div>
 
