--- a/app/views/other_events/edit.html.erb
+++ b/app/views/other_events/edit.html.erb
@@ -21,16 +21,16 @@
     <br><br>
 
     <div class="input-group input-group-sm mb-3">
-      <span class='input-group-text'>Name</span>
+      <%= form.label :name %>
       <%= form.text_field :name %>
     </div>
 
-    <div class="input-group input-group-sm mb-3>
+    <div class="input-group input-group-sm mb-3">
       <%= form.label :date %>
       <%= form.date_field :date %>
     </div>
 
-    <div class="input-group input-group-sm mb-3>
+    <div class="input-group input-group-sm mb-3">
       <%= form.label :start_time %>
       <%= form.time_field :start_time %>
     </div>
