--- a/app/views/other_events/_form.html.erb
+++ b/app/views/other_events/_form.html.erb
@@ -19,7 +19,7 @@
     <br><br>
 
     <div class="input-group input-group-sm mb-3">
-      <%= form.label :other_event_name, style: "display: block" %>
+      <%= form.label :name, style: "display: block" %>
       <%= form.text_field :name %>
     </div>
 
@@ -28,7 +28,7 @@
       <%= form.date_field :date %>
     </div>
 
-    <div class="input-group input-group-sm mb-3>
+    <div class="input-group input-group-sm mb-3">
       <%= form.label :start_time %>
       <%= form.time_field :start_time %>
     </div>
