--- a/app/views/holidays/edit.html.erb
+++ b/app/views/holidays/edit.html.erb
@@ -18,7 +18,7 @@
     </div>
 
     <div class="input-group input-group-sm mb-3">
-      <%= form.label :holiday_name, style: "display: block" %>
+      <%= form.label :name, style: "display: block" %>
       <%= form.text_field :name %>
     </div>
 
